// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders default 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="ButtonGroup-root"
    >
      <button
        class="MuiButtonBase-root Button-medium Button-flat Button-root ButtonGroup-button"
        tabindex="0"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          «
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-medium Button-flat Button-root ButtonGroup-button"
        tabindex="0"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          ⟨
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-medium Button-flatDisabled Button-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          ...
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-medium Button-flat Button-root ButtonGroup-button"
        tabindex="0"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          2
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-medium Button-flat Button-root ButtonGroup-button"
        tabindex="0"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          3
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-medium Button-flat Button-root ButtonGroup-button"
        tabindex="0"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          4
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-medium Button-primaryBlue Button-root ButtonGroup-button"
        tabindex="0"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          5
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-medium Button-flat Button-root ButtonGroup-button"
        tabindex="0"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          6
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-medium Button-flat Button-root ButtonGroup-button"
        tabindex="0"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          7
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-medium Button-flat Button-root ButtonGroup-button"
        tabindex="0"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          8
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-medium Button-flatDisabled Button-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          ...
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-medium Button-flat Button-root ButtonGroup-button"
        tabindex="0"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          ⟩
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-medium Button-flat Button-root ButtonGroup-button"
        tabindex="0"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          »
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders disabled 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="ButtonGroup-root"
    >
      <button
        class="MuiButtonBase-root Button-medium Button-flatDisabled Button-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          «
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-medium Button-flatDisabled Button-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          ⟨
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-medium Button-flatDisabled Button-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          ...
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-medium Button-flatDisabled Button-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          2
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-medium Button-flatDisabled Button-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          3
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-medium Button-flatDisabled Button-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          4
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-medium Button-primaryDisabled Button-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          5
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-medium Button-flatDisabled Button-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          6
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-medium Button-flatDisabled Button-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          7
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-medium Button-flatDisabled Button-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          8
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-medium Button-flatDisabled Button-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          ...
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-medium Button-flatDisabled Button-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          ⟩
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-medium Button-flatDisabled Button-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          »
        </div>
      </button>
    </div>
  </div>
</div>
`;
